<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-ed</string>
    <string name="finish">FINISH</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="i_am_a">I am a:</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>

</resources>
